# IHAN-MyCompany-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  start_emulator.bat
backend/: README.md  pyproject.toml  settings.py  tasks.py  utils.py
backend/app/: api.py  auth.py  db.py  log.py  models.py  utils.py
backend/app/routers/: auth.py  configuration.py  consents.py  health.py  product_gateway.py
backend/app/tests/: test_utils.py
docker/: build-prepare.sh  build-setup.sh  nginx-entrypoint.sh  runtime-entrypoint.sh  runtime-prepare.sh
frontend/accountant/: .env  README.md
frontend/accountant/src/: App.js
frontend/accountant/src/components/: VerticalMenu.js
frontend/accountant/src/containers/: CompanyView.js
frontend/accountant/src/theme/: index.js
frontend/my-company/: .env  README.md
frontend/my-company/src/: App.js
frontend/my-company/src/components/: VerticalMenu.js
frontend/my-company/src/containers/: CompanyView.js  Login.js  OwnershipView.js
frontend/my-company/src/theme/: index.js
frontend/my-company/src/utilities/: api.js  index.js
nginx/conf.d/: default.conf
